cmake_minimum_required(VERSION 3.1)

project(Language LANGUAGES CXX)

add_subdirectory(./Problem45)
add_subdirectory(./Problem46)
add_subdirectory(./Problem47)
add_subdirectory(./Problem48)
add_subdirectory(./Problem49)
add_subdirectory(./Problem50)
add_subdirectory(./Problem51)
add_subdirectory(./Problem52)
add_subdirectory(./Problem53)
