cmake_minimum_required(VERSION 3.1)

project(Language LANGUAGES CXX)

add_subdirectory(./Problem15)
add_subdirectory(./Problem16)
add_subdirectory(./Problem17)
add_subdirectory(./Problem18)
add_subdirectory(./Problem19)
add_subdirectory(./Problem20)
add_subdirectory(./Problem21)
add_subdirectory(./Problem22)